--- a/src/main/resources/templates/product.mustache
+++ b/src/main/resources/templates/product.mustache
@@ -117,8 +117,9 @@
             {{#reviews}}
             <tr>
                 <td class="num">0</td>
+                <td class="thumb"><a href="/products/{{product.productNo}}"><img src="{{product.mainImage}}" width="50px" height="50px" alt=""><span>{{product.name}}</span></a></td>
                 <td class="subject">
-                    <a href="review_detail.html" style="color:#555555;">{{content}}</a>
+                    <a href="/" style="color:#555555;">{{content}}</a>
                 </td>
                 <td class="writer">작성자</td>
                 <td class="txtLess ">{{createddate}}</td>
