--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1277,9 +1277,8 @@ padding: 0;
     width: 100%;
     height: 70vh;
     display: flex;
-    max-width: 600px;
-    height: 650px;
-    width: 100%;
+    max-width: 800px;
+    height: 1370px;
     background: #fff;
     margin: 20px auto;
     padding: 10px 12px;
@@ -1332,6 +1331,11 @@ padding: 0;
 #signupA-area .contentBx .formBx .inputBx{
     margin-bottom: 60px;
     justify-content: center;
+    align-items: center;
+}
+
+#signupA-area .contentBx .formBx h3 {
+    font-size: 48px;
     align-items: center;
 }
 
